--- a/rush.yaml
+++ b/rush.yaml
@@ -112244,3 +112244,464 @@ is_translation_unofficial:
   text:
     en: true
 yugipedia_page_id: 994852
+---
+konami_id:
+name:
+  en: Jointech Arc Scorpio
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: ジョインテック・アークスコーピオ
+  ja_romaji: Jointekku Āku Sukōpio
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Send 1 Machine Type monster from your hand or face-up from your field to the Graveyard.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Add 1 "Fusion" or "Power Bond" from your Graveyard to your hand. Then, you can Special Summon 1 "Jointech Spike Centipede" from your Graveyard face-up to your field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Machine / Effect
+attribute: EARTH
+level: 7
+atk: 2200
+def: 1600
+series:
+- Jointech
+images:
+- index: 1
+  image: JointechArcScorpio-RDKP14-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP14-JP006
+    set_name: Phoenix of the Roaring Flame
+    rarities:
+    - Common
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 994922
+---
+konami_id:
+name:
+  en: Jointech Spike Centipede
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: ジョインテック・スパイクセンチピード
+  ja_romaji: Jointekku Supaiku Senchipīdo
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Return 1 other face-up Level 5 or higher EARTH Attribute Machine Type monster from your field to the owner's hand.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Destroy 1 monster on your opponent's field. This turn, you cannot activate the effects of non-Machine Type monsters.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Machine / Effect
+attribute: EARTH
+level: 7
+atk: 2400
+def: 1600
+series:
+- Jointech
+images:
+- index: 1
+  image: JointechSpikeCentipede-RDKP14-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP14-JP007
+    set_name: Phoenix of the Roaring Flame
+    rarities:
+    - Common
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 994924
+---
+konami_id:
+name:
+  en: Jointech Killer Stinger
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: ジョインテック・キラースティンガー
+  ja_romaji: Jointekku Kirā Sutingā
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Send the top card of your Deck to the Graveyard.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    All face-up monsters on your opponent's field lose ATK equal to [the number of monsters on your opponent's field] x 700 until the end of this turn. Then, you gain LP equal to [the number of monsters on your opponent's field] x 700.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Machine / Fusion / Effect
+attribute: EARTH
+level: 9
+atk: 3000
+def: 2500
+materials:
+  en: |-
+    "Jointech Spike Centipede" + "Jointech Arc Scorpio"
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+series:
+- Jointech
+images:
+- index: 1
+  image: JointechKillerStinger-RDKP14-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP14-JP044
+    set_name: Phoenix of the Roaring Flame
+    rarities:
+    - Rare
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 994926
+---
+konami_id:
+name:
+  en: Jointech Cobra
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: ジョインテック・コブラ
+  ja_romaji: Jointekku Kobura
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    You have no other monsters on your field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Special Summon 1 "Jointech Arc Scorpio", "Jointech Spike Centipede", or "Jointech Rex" from your Graveyard to your field in face-up Defense Position. This turn, you cannot activate the effects of non-Machine Type monsters.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Machine / Effect
+attribute: EARTH
+level: 2
+atk: 1000
+def: 600
+series:
+- Jointech
+images:
+- index: 1
+  image: JointechCobra-RDKP14-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP14-JP002
+    set_name: Phoenix of the Roaring Flame
+    rarities:
+    - Common
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 994928
+---
+konami_id:
+name:
+  en: Mega Jointech Fortrex
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: メガジョインテック・フォートレックス
+  ja_romaji: Mega Jointekku Fōtorekkusu
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+summoning_condition:
+  en: |-
+    You can Maximum Summon this card together with "Mega Jointech Fortrex [L]" and "Mega Jointech Fortrex [R]".
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Maximum Mode
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect_types:
+- Continuous
+effect:
+  en: |-
+    Increase this card's Level by 6. Also, if you have a Level 7 or higher Machine Type monster in your Graveyard, this card cannot be destroyed by card effects.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Machine / Maximum / Effect
+attribute: EARTH
+level: 4
+atk: 1300
+def: 0
+series:
+- Jointech
+maximum_atk: 3000
+images:
+- index: 1
+  image: MegaJointechFortrex-RDKP14-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP14-JP004
+    set_name: Phoenix of the Roaring Flame
+    rarities:
+    - Rare
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 994930
+---
+konami_id:
+name:
+  en: Mega Jointech Fortrex [L]
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: メガジョインテック・フォートレックス［<ruby>Ｌ<rt>エル</rt></ruby>］
+  ja_romaji: Mega Jointekku Fōtorekkusu [Eru]
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Send 1 EARTH Attribute Machine Type monster from your hand to the Graveyard.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    This card loses 600 ATK until the end of this turn. Then, toss a coin. If the result is heads, this card can attack 3 times this turn. If the result is tails, this turn, this card can make up to 2 attacks on monsters, and if it attacks a Defense Position monster, inflict piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference).
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Machine / Maximum / Effect
+attribute: EARTH
+level: 4
+atk: 1300
+def: 0
+series:
+- Jointech
+images:
+- index: 1
+  image: MegaJointechFortrexL-RDKP14-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP14-JP003
+    set_name: Phoenix of the Roaring Flame
+    rarities:
+    - Rare
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 994932
+---
+konami_id:
+name:
+  en: Mega Jointech Fortrex [R]
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: メガジョインテック・フォートレックス［<ruby>Ｒ<rt>アール</rt></ruby>］
+  ja_romaji: Mega Jointekku Fōtorekkusu [Āru]
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    None
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Each player shuffles 3 monsters from their opponent's Graveyard into the owner's Deck. Then, if this card is in Maximum Mode, it gains ATK equal to [the total Levels of the EARTH Attribute Machine Type monsters shuffled by this effect] x 100 until the end of this turn.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Machine / Maximum / Effect
+attribute: EARTH
+level: 4
+atk: 1300
+def: 0
+series:
+- Jointech
+images:
+- index: 1
+  image: MegaJointechFortrexR-RDKP14-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP14-JP005
+    set_name: Phoenix of the Roaring Flame
+    rarities:
+    - Rare
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 994934
