--- a/data/cards/kdb19076.yaml
+++ b/data/cards/kdb19076.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 19076
 password:
 name:
   en: Flametongue the Blazing Magical Blade
@@ -22,7 +22,9 @@ text:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    炎属性モンスター２体
+    このカード名の②の効果は１ターンに１度しか使用できない。①：このカードがモンスターゾーンに存在する限り、自分フィールドの表側表示の魔法・罠カードは相手の効果では破壊されない。②：自分の除外状態の炎属性モンスター１体を対象として発動できる。そのモンスターを手札に加える。このターン、自分はこの効果で手札に加えたカード及びその同名カードの効果を発動できない。
   ko:
   zh-TW:
   zh-CN:
@@ -45,7 +47,7 @@ sets:
     - Ultra Rare
 limit_regulation:
   tcg: Not yet released
-  ocg: Not yet released
+  ocg: Unlimited
 is_translation_unofficial:
   name:
     en: true
