--- a/rush.yaml
+++ b/rush.yaml
@@ -114543,6 +114543,64 @@ yugipedia_page_id: 1004316
 ---
 konami_id:
 name:
+  en: My Patience Has Run Out!
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: ガマンが<ruby>限<rt>げん</rt></ruby><ruby>界<rt>かい</rt></ruby>！
+  ja_romaji: Gaman ga Genkai!
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Your LP are lower than your opponent's.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    This turn, up to 2 face-up Omega Psychic and/or Psychic Type monsters on your field gain 900 ATK, and if they attack a Defense Position monster, inflict piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference).
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Spell
+property: Normal
+series:
+- Psychic Musician
+images:
+- index: 1
+  image: MyPatienceHasRunOut-RDMRP2-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/MRP2-JP067
+    set_name: Megaroad Pack 2
+    rarities:
+    - Common
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1004489
+---
+konami_id:
+name:
   en: Time Wizard
   de:
   es:
