--- a/rush.yaml
+++ b/rush.yaml
@@ -35926,7 +35926,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    1 Attack Position Fairy Type monster on your field cannot be destroyed by battle this turn. Your opponent gains LP equal to [that monster's ATK].
+    1 Attack Position Fairy Type monster on your field cannot be destroyed by battle this turn. Then, your opponent gains LP equal to [that monster's ATK].
   de:
   es:
   fr:
@@ -39288,8 +39288,6 @@ effect:
   zh-CN:
 card_type: Spell
 property: Normal
-series:
-- Worker Warrior
 images:
 - index: 1
   image: BusinessCardBarrage-RDKP06-JP-R.png
@@ -40378,8 +40376,6 @@ effect:
   zh-CN:
 card_type: Trap
 property: Normal
-series:
-- Worker Warrior
 images:
 - index: 1
   image: SalarySlash-RDSD02-JP-C.png
@@ -40451,8 +40447,6 @@ effect:
   zh-CN:
 card_type: Trap
 property: Normal
-series:
-- Worker Warrior
 images:
 - index: 1
   image: BattleDemotion-RDSD02-JP-C.png
