--- a/data/rush/17990.yaml
+++ b/data/rush/17990.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    During your Main Phase that you Normal or Special Summoned this card.
+    During your Main Phase this card was Normal or Special Summoned.
   de:
   es:
   fr:
