--- a/data/cards/05556668.yaml
+++ b/data/cards/05556668.yaml
@@ -196,5 +196,5 @@ sets:
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
-  speed: Not yet released
+  speed: Unlimited
 yugipedia_page_id: 450
