--- a/data/cards/27911549.yaml
+++ b/data/cards/27911549.yaml
@@ -201,5 +201,5 @@ sets:
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
-  speed: Not yet released
+  speed: Unlimited
 yugipedia_page_id: 221
