--- a/data/cards/97120394.yaml
+++ b/data/cards/97120394.yaml
@@ -122,5 +122,5 @@ sets:
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
-  speed: Not yet released
+  speed: Unlimited
 yugipedia_page_id: 12275
