--- a/data/rush/17211.yaml
+++ b/data/rush/17211.yaml
@@ -45,12 +45,18 @@ property: Normal
 images:
 - index: 1
   image: MagicalStoneExcavation-RDGRP1-JP-SR.png
+- index: 2
+  image: MagicalStoneExcavation-RDS23P-JP-OP.png
 sets:
   ja:
   - set_number: RD/GRP1-JP029
     set_name: Gold Rush Pack
     rarities:
     - Super Rare
+  - set_number: RD/S23P-JP006
+    set_name: Tournament Battle September 2023 prize card
+    rarities:
+    - Ultra Parallel Rare
   ko:
   - set_number: RD/GRP1-KR029
     set_name: Grand Rush Pack
