--- a/rush.yaml
+++ b/rush.yaml
@@ -116029,6 +116029,66 @@ yugipedia_page_id: 1006408
 ---
 konami_id:
 name:
+  en: Node of Legend
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: ノード・オブ・レジェンド
+  ja_romaji: Nōdo Obu Rejendo
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    During the turn you Normal Summoned this card.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Send the top card of your Deck to the Graveyard. Then, you can add 1 "The Origin Stone of Legend" or "Sanctum of Legend" from your Graveyard to your hand.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Dragon / Effect
+attribute: EARTH
+level: 4
+atk: 1300
+def: 0
+images:
+- index: 1
+  image: NodeofLegend-RDSD0A-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/SD0A-JP006
+    set_name: 'Structure Deck: Ultimate Blue-Eyes Legend'
+    rarities:
+    - Common
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1008684
+---
+konami_id:
+name:
   en: Time Wizard
   de:
   es:
