--- a/data/cards/64867422.yaml
+++ b/data/cards/64867422.yaml
@@ -12,7 +12,7 @@ name:
   ko: 『불꽃성검－오뜨끌레르』
   ko_rr: '"Pulkkotseonggeom - Otteukkeulleoreu"'
   zh-TW:
-  zh-CN: 『焰圣剑-奥特克莱尔』
+  zh-CN: 『焰圣剑－奥特克莱尔』
 text:
   en: |-
     While this card is equipped to a monster: You can target 1 face-up monster you control; this turn, you cannot declare attacks, except with that monster, also it gains the ability this turn to make a second attack during each Battle Phase, then destroy this card. If this card is sent to the GY because the equipped monster is sent to the GY: You can target 1 face-up monster on the field; destroy it. You can only use 1 ""Infernoble Arms - Hauteclere"" effect per turn, and only once that turn.
@@ -32,9 +32,7 @@ text:
     이 카드명의 ①②의 효과는 1턴에 1번, 어느 쪽이든 1개밖에 사용할 수 없다. ①: 이 카드가 장착되어 있을 경우, 자신 필드의 앞면 표시 몬스터 1장을 대상으로 하고 발동할 수 있다. 이 턴에, 자신은 그 몬스터로밖에 공격 선언할 수 없으며, 그 몬스터는 1번의 배틀 페이즈 중에 2회 공격할 수 있다. 그 후, 이 카드를 파괴한다. ②: 장착 몬스터가 묘지로 보내진 것으로 이 카드가 묘지로 보내졌을 경우, 필드의 앞면 표시 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터를 파괴한다.
   zh-TW:
   zh-CN: |-
-    这个卡名的①②的效果1回合只能有1次使用其中任意1个。
-    ①：这张卡装备中的场合，以自己场上1只表侧表示怪兽为对象才能发动。这个回合，自己不用那只怪兽不能攻击宣言，那只怪兽在同1次的战斗阶段中可以作2次攻击。那之后，这张卡破坏。
-    ②：装备怪兽被送去墓地让这张卡被送去墓地的场合，以场上1只表侧表示怪兽为对象才能发动。那只怪兽破坏。
+    此卡名的①②效果１回合１次，仅可使用其中１个。①：此卡被装备中的情况下，以自己场上的１只表侧表示怪兽为对象可以发动。此回合，自己仅可用该怪兽攻击宣言，该怪兽在１次战斗阶段中可攻击２次。然后破坏此卡。②：因装备怪兽被送至墓地导致此卡被送至墓地的情况下，以场上１只表侧表示怪兽为对象可以发动。将该怪兽破坏。
 card_type: Spell
 property: Equip
 series:
