--- a/rush.yaml
+++ b/rush.yaml
@@ -123270,8 +123270,8 @@ name:
   fr:
   it:
   pt:
-  ja: 波導銃ミニ・マグロム
-  ja_romaji:
+  ja: <ruby>波導銃<rt>ハイドロガン</rt></ruby>ミニ・マグロム
+  ja_romaji: Haidoro Gan Mini Maguromu
   ko:
   ko_rr:
   zh-TW:
@@ -123321,3 +123321,515 @@ is_translation_unofficial:
   text:
     en: true
 yugipedia_page_id: 1023239
+---
+konami_id:
+name:
+  en: Charge Remora
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: チャージ・リモーラ
+  ja_romaji: Chāji Rimōra
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Send 1 Fish Type monster from your hand to the Graveyard.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Set 1 "Fish Depth Charge" from your Graveyard in your Spell & Trap Zone.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Fish / Effect
+attribute: WATER
+level: 3
+atk: 1000
+def: 500
+images:
+- index: 1
+  image: ChargeRemora-RDKP15-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP15-JP018
+    set_name: Red Reboot of Darkness
+    rarities:
+    - Common
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1023240
+---
+konami_id:
+name:
+  en: Carrier Manta Ray
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: キャリアー・マンタレイ
+  ja_romaji: Kyariā Manta Rei
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    During the turn you Normal Summoned this card.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Send the top 2 cards of your Deck to the Graveyard. Then, you can add 1 "Charge Remora" or 1 "Fish Depth Charge" from among the cards sent to the Graveyard by this effect to your hand.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Fish / Effect
+attribute: WATER
+level: 3
+atk: 1000
+def: 500
+images:
+- index: 1
+  image: CarrierMantaRay-RDKP15-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP15-JP019
+    set_name: Red Reboot of Darkness
+    rarities:
+    - Common
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1023241
+---
+konami_id:
+name:
+  en: Cyber Fish
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: サイバー・フィッシュ
+  ja_romaji: Saibā Fisshu
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Send 1 WATER Attribute Fish Type monster from your hand to the Graveyard.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Draw 1 card.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Fish / Effect
+attribute: WATER
+level: 4
+atk: 1000
+def: 1200
+images:
+- index: 1
+  image: CyberFish-RDKP15-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP15-JP020
+    set_name: Red Reboot of Darkness
+    rarities:
+    - Common
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1023242
+---
+konami_id:
+name:
+  en: Surging-Wave Swordsman Tanegashima Tuna
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: <ruby>波<rt>は</rt></ruby><ruby>導<rt>どう</rt></ruby><ruby>刀<rt>とう</rt></ruby>タネガシマグロ
+  ja_romaji: Hadōtō Tanegashimaguro
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    If you have a Level 7 Fish Type monster, "Fusion", or "Wave Fusion" in your Graveyard, send 1 card from your hand to the Graveyard.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Add 1 Level 7 Fish Type monster, "Fusion", or "Wave Fusion" from your Graveyard to your hand.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Fish / Effect
+attribute: WATER
+level: 1
+atk: 0
+def: 0
+series:
+- Surging-Wave
+images:
+- index: 1
+  image: SurgingWaveSwordsmanTanegashimaTuna-RDKP15-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP15-JP016
+    set_name: Red Reboot of Darkness
+    rarities:
+    - Common
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1023245
+---
+konami_id:
+name:
+  en: Surging-Wave Swordsman Onimaru Kunituna
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: <ruby>波<rt>は</rt></ruby><ruby>導<rt>どう</rt></ruby><ruby>刀<rt>とう</rt></ruby><ruby>鬼<rt>おに</rt></ruby><ruby>丸<rt>まる</rt></ruby>クニツナ
+  ja_romaji: Hadōtō Onimaru Kunitsuna
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    None
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect_types:
+- Continuous
+effect:
+  en: |-
+    Face-up Fish Type monsters on your field cannot be destroyed by your opponent's card effects.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Fish / Effect
+attribute: WATER
+level: 7
+atk: 2500
+def: 2000
+series:
+- Surging-Wave
+images:
+- index: 1
+  image: SurgingWaveSwordsmanOnimaruKunituna-RDKP15-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP15-JP022
+    set_name: Red Reboot of Darkness
+    rarities:
+    - Common
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1023247
+---
+konami_id:
+name:
+  en: Dark Hydro Cannon Neutron Bluefin
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: <ruby>暗黒波導砲<rt>ダークハイドロキャノン</rt></ruby>ニュートロン・マグロム
+  ja_romaji: Dāku Haidoro Kyanon Nyūtoron Maguromu
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    None
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect_types:
+- Continuous
+effect:
+  en: |-
+    If the only face-up monsters on your field are Fusion Monsters, this card can attack directly. If your opponent has a face-up Maximum Monster on their field, your opponent cannot activate monster effects.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Fish / Fusion / Effect
+attribute: WATER
+level: 9
+atk: 2900
+def: 2100
+materials:
+  en: |-
+    "Hydro Cannon Big Bluefin" + "Surging-Wave Swordsman Tanegashima Tuna"
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+images:
+- index: 1
+  image: DarkHydroCannonNeutronBluefin-RDKP15-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP15-JP044
+    set_name: Red Reboot of Darkness
+    rarities:
+    - Rare
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1023253
+---
+konami_id:
+name:
+  en: Pitch-Dark Surging-Wave Swordsman Onimaru Kunituna
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: <ruby>漆<rt>しっ</rt></ruby><ruby>黒<rt>こく</rt></ruby><ruby>波<rt>は</rt></ruby><ruby>導<rt>どう</rt></ruby><ruby>刀<rt>とう</rt></ruby><ruby>鬼<rt>おに</rt></ruby><ruby>丸<rt>まる</rt></ruby>クニツナ
+  ja_romaji: Shikkoku Hadōtō Onimaru Kunitsuna
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    None
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect_types:
+- Continuous
+effect:
+  en: |-
+    If this card attacks a Defense Position monster, inflict piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference). Face-up Fish Type monsters on your field cannot be destroyed by your opponent's card effects.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Fish / Fusion / Effect
+attribute: WATER
+level: 9
+atk: 3000
+def: 2000
+materials:
+  en: |-
+    "Surging-Wave Swordsman Onimaru Kunituna" + "Hydro Gun Mini Bluefin"
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+series:
+- Surging-Wave
+images:
+- index: 1
+  image: PitchDarkSurgingWaveSwordsmanOnimaruKunituna-RDKP15-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP15-JP045
+    set_name: Red Reboot of Darkness
+    rarities:
+    - Common
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1023256
+---
+konami_id:
+name:
+  en: Wave Fusion
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: <ruby>波<rt>は</rt></ruby><ruby>涛<rt>とう</rt></ruby><ruby>融<rt>ゆう</rt></ruby><ruby>合<rt>ごう</rt></ruby>
+  ja_romaji: Hatō Yūgō
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    You have 5 or more WATER Attribute Fish Type monsters in your Graveyard.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Fusion Summon a WATER Attribute Fish Type monster by shuffling WATER Attribute Fish Type monsters from your field and/or Graveyard into the Deck as material.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Spell
+property: Normal
+images:
+- index: 1
+  image: WaveFusion-RDKP15-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP15-JP054
+    set_name: Red Reboot of Darkness
+    rarities:
+    - Rare
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1023258
