--- a/rush.yaml
+++ b/rush.yaml
@@ -124404,3 +124404,175 @@ is_translation_unofficial:
   text:
     en: true
 yugipedia_page_id: 1023821
+---
+konami_id:
+name:
+  en: Miracle Pick
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: ミラクルピック
+  ja_romaji:
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Reveal 1 Level 7 LIGHT or DARK Attribute Psychic Type monster with 0 DEF in your hand to your oppoennt.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Excavate the top 3 cards of your Deck. Add 1 excavated card to your hand. Send the remaining cards to the Graveyard. You can only attack with Omega Psychic Type or Psychic Type monsters this turn.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Spell
+property: Normal
+images:
+- index: 1
+  image: MiraclePick-RDKP15-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP15-JP052
+    set_name: Red Reboot of Darkness
+    rarities:
+    - Common
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1024560
+---
+konami_id:
+name:
+  en: Peace & Rock n' Roll
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: ピース＆ロックンロール
+  ja_romaji:
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    When your opponent Normal or Special Summons a monster while you have "Prima Guitarna the Shining Superstar" or "Esperade the Smashing Superstar" face-up on your field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Destroy 1 monster on your opponent's field. Then, if your LP are 2000 or lower, this turn, you take no battle damage, also you take no damage from your opponent's card effects.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Trap
+property: Normal
+images:
+- index: 1
+  image: PeaceRocknRoll-RDKP15-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP15-JP061
+    set_name: Red Reboot of Darkness
+    rarities:
+    - Common
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1024563
+---
+konami_id:
+name:
+  en: Star's Hand Camera Lady
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: スターズハンド・カメラレディ
+  ja_romaji:
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    During your Main Phase this card was Normal or Special Summoned.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Send the top 2 cards of your Deck to the Graveyard. Then, if you have "Esperade the Smashing Superstar" face-up on your field, you can destroy 1 Spell/Trap Card on your opponent's field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Psychic / Effect
+attribute: LIGHT
+level: 2
+atk: 500
+def: 0
+images:
+- index: 1
+  image: StarsHandCameraLady-RDKP15-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP15-JP015
+    set_name: Red Reboot of Darkness
+    rarities:
+    - Common
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1024564
