--- a/rush.yaml
+++ b/rush.yaml
@@ -6086,7 +6086,7 @@ text:
   it:
   pt:
   ja: |-
-    <ruby>真<rt>しん</rt></ruby><ruby>紅<rt>く</rt></ruby>の<ruby>眼<rt>め</rt></ruby>を<ruby>持<rt>も</rt></ruby>つ<ruby>黒<rt>こく</rt></ruby><ruby>竜<rt>りゅう</rt></ruby>。<ruby>怒<rt>いか</rt></ruby>りの<ruby>黒<rt>くろ</rt></ruby>き<ruby>炎<rt>ほのお</rt></ruby>はその<ruby>眼<rt>め</rt></ruby>に<ruby>映<rt>うつ</rt></ruby>る<ruby>者<rt>もの</rt></ruby><ruby>全<rt>すべ</rt></ruby>てを<ruby>焼<rt>や</rt></ruby>き<ruby>尽<rt>つ</rt></ruby>くす。
+    真紅の眼を持つ黒竜。怒りの黒き炎はその眼に映る者全てを焼き尽くす。
   ko: |-
     붉은 눈을 가진 흑룡. 분노의 검은 화염은 그 눈에 비치는 자들을 모조리 불태워 버린다.
   zh-TW:
@@ -12106,7 +12106,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    Shuffle 1 monster with 0 ATK from your Graveyard  into the Deck.
+    Shuffle 1 monster with 0 ATK from your Graveyard into the Deck.
   de: |-
     Mische 1 Monster mit 0 ATK von deinem Friedhof in das Deck.
   es: |-
@@ -14998,7 +14998,7 @@ text:
     Un demone che confonde i nemici con i suoi poteri oscuri. Tra tutti i mostri di Tipo Demone, questo vanta una forza considerevole.
   pt:
   ja: |-
-    <ruby>闇<rt>やみ</rt></ruby>の<ruby>力<rt>ちから</rt></ruby>を<ruby>使<rt>つか</rt></ruby>い、<ruby>人<rt>ひと</rt></ruby>の<ruby>心<rt>こころ</rt></ruby>を<ruby>惑<rt>まど</rt></ruby>わすデーモン。<ruby>悪<rt>あく</rt></ruby><ruby>魔<rt>ま</rt></ruby><ruby>族<rt>ぞく</rt></ruby>ではかなり<ruby>強<rt>きょう</rt></ruby><ruby>力<rt>りょく</rt></ruby>な<ruby>力<rt>ちから</rt></ruby>を<ruby>誇<rt>ほこ</rt></ruby>る。
+    闇の力を使い、人の心を惑わすデーモン。悪魔族ではかなり強力な力を誇る。
   ko: |-
     어둠의 힘을 사용하여, 사람의 마음을 유혹하는 데몬. 악마족 중에서도 상당히 강력한 힘을 자랑한다.
   zh-TW:
@@ -15013,6 +15013,9 @@ legend: true
 images:
 - index: 1
   image: SummonedSkull-RDLGP1-JP-R.png
+  illustration: SummonedSkull-DBR-JP-VG-artwork.png
+- index: 2
+  image: SummonedSkull-RDS23P-JP-OP.png
 sets:
   ja:
   - set_number: RD/KP03-JP000
@@ -22017,7 +22020,7 @@ text:
   it:
   pt:
   ja: |-
-    <ruby>剣<rt>けん</rt></ruby><ruby>術<rt>じゅつ</rt></ruby>を<ruby>学<rt>まな</rt></ruby>んだエルフ。<ruby>素<rt>す</rt></ruby><ruby>早<rt>ばや</rt></ruby>い<ruby>攻<rt>こう</rt></ruby><ruby>撃<rt>げき</rt></ruby>で<ruby>敵<rt>てき</rt></ruby>を<ruby>翻<rt>ほん</rt></ruby><ruby>弄<rt>ろう</rt></ruby>する。
+    剣術を学んだエルフ。素早い攻撃で敵を翻弄する。
   ko: |-
     뛰어난 검술 실력을 자랑하는 엘프. 재빠른 공격으로 적을 당황하게 만든다.
   zh-TW:
@@ -28441,7 +28444,7 @@ images:
 - index: 1
   image: BusterBlader-RDLGP1-JP-R.png
   illustration: BusterBlader-DBR-JP-VG-artwork.png
-- index: '1.1'
+- index: 2
   image: BusterBlader-RDS23P-JP-OP.png
 sets:
   ja:
