--- a/rush.yaml
+++ b/rush.yaml
@@ -124951,6 +124951,121 @@ yugipedia_page_id: 1025257
 ---
 konami_id:
 name:
+  en: Kaiser Dragon
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ja_romaji:
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+text:
+  en: |-
+    "Winged Dragon, Guardian of the Fortress #1" + "Fairy Dragon"
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Dragon / Fusion
+attribute: LIGHT
+level: 7
+atk: 2300
+def: 2000
+materials:
+  en: |-
+    "Winged Dragon, Guardian of the Fortress 1" + "Fairy Dragon"
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+images:
+- index: 1
+  image: KaiserDragon-RD24PR-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/24PR-JP004
+    set_name: Rush Duel Promotion Pack 2024
+    rarities:
+    - Normal Parallel Rare
+yugipedia_page_id: 1026307
+---
+konami_id:
+name:
+  en: Interstellive
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: インターステライヴ
+  ja_romaji: Intāsuteraivu
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    You have 10 or more cards in your Deck and 2 "Interstellive" and/or "Interstellime" face-up on your field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Draw 1 card.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Galaxy / Effect
+attribute: LIGHT
+level: 1
+atk: 1000
+def: 0
+images:
+- index: 1
+  image: Interstellive-RD24PR-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/24PR-JP002
+    set_name: Rush Duel Promotion Pack 2024
+    rarities:
+    - Normal Parallel Rare
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1026309
+---
+konami_id:
+name:
   en: Fusion Cancel
   de:
   es:
