--- a/rush.yaml
+++ b/rush.yaml
@@ -121764,6 +121764,7 @@ sets:
     set_name: Red Reboot of Darkness
     rarities:
     - Rare
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
@@ -121843,6 +121844,7 @@ sets:
     set_name: Red Reboot of Darkness
     rarities:
     - Rare
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
@@ -122595,6 +122597,7 @@ sets:
     set_name: Red Reboot of Darkness
     rarities:
     - Rare
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
@@ -123188,6 +123191,8 @@ def: 2000
 images:
 - index: 1
   image: CyberShark-RDKP15-JP-OP.png
+- index: 2
+  image: CyberShark-RDKP15-JP-ScR-AA.png
 sets:
   ja:
   - set_number: RD/KP15-JP021
@@ -124542,6 +124547,8 @@ property: Normal
 images:
 - index: 1
   image: MaidsMischief-RDKP15-JP-OP.png
+- index: 2
+  image: MaidsMischief-RDKP15-JP-ScR-AA.png
 sets:
   ja:
   - set_number: RD/KP15-JP060
@@ -124687,6 +124694,8 @@ def: 0
 images:
 - index: 1
   image: PureLoveAngel-RDKP15-JP-OP.png
+- index: 2
+  image: PureLoveAngel-RDKP15-JP-ScR-AA.png
 sets:
   ja:
   - set_number: RD/KP15-JP030
@@ -124971,7 +124980,8 @@ text:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    「砦を守る翼竜」＋「フェアリー・ドラゴン」
   ko:
   zh-TW:
   zh-CN:
@@ -125020,13 +125030,14 @@ name:
   zh-CN:
 requirement:
   en: |-
-    You have 10 or more cards in your Deck and 2 "Interstellive" and/or "Interstellime" face-up on your field.
+    You have 10 or more cards in your Deck and have a total of 2 "Interstellive" and/or "Interstellime" face-up on your field.
   de:
   es:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分のデッキのカードが１０枚以上で、自分フィールドの表側表示の「インターステライヴ」「インターステライム」が合計２体の場合に発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -125038,7 +125049,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分は１枚ドローする。
   ko:
   zh-TW:
   zh-CN:
@@ -125111,6 +125123,8 @@ series:
 images:
 - index: 1
   image: FusionCancel-RDKP15-JP-OP.png
+- index: 2
+  image: FusionCancel-RDKP15-JP-ScR-AA.png
 sets:
   ja:
   - set_number: RD/KP15-JP066
