--- a/rush.yaml
+++ b/rush.yaml
@@ -124557,7 +124557,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Return 1 face-up Fusion Monster on the field to the owner's Extra Deck. Then, its owner can Special Summon all of the monsters whose names are mentioned on the returned monster as material from their Graveyard face-up to their field.
+    Return 1 face-up Fusion Monster on the field to the owner's Extra Deck. Then, if all of the materials' names are specifically mentioned on the returned monster, its owner can Special Summon all of them from their Graveyard face-up to their field.
   de:
   es:
   fr:
