--- a/data/rush/15905.yaml
+++ b/data/rush/15905.yaml
@@ -101,7 +101,7 @@ sets:
     rarities:
     - Ultra Rare
     - Rush Rare
-  - set_number: RD/SBD6-JP002
+  - set_number: RD/SBD6-KR002
     set_name: Strongest Battle Deck Nail - Maximum Haven
     rarities:
     - Common
