--- a/rush.yaml
+++ b/rush.yaml
@@ -19153,7 +19153,7 @@ sets:
     rarities:
     - Ultra Rare
     - Rush Rare
-  - set_number: RD/SBD6-JP002
+  - set_number: RD/SBD6-KR002
     set_name: Strongest Battle Deck Nail - Maximum Haven
     rarities:
     - Common
@@ -125161,3 +125161,260 @@ is_translation_unofficial:
   text:
     en: true
 yugipedia_page_id: 1026309
+---
+konami_id:
+name:
+  en: Black Dragon Skull Archfiend
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: ブラック・ドラゴンズ・デーモン
+  ja_romaji: Burakku Doragonzu Dēmon
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Send the top card of your Deck to the Graveyard.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    All face-up monsters on your field gain 500 ATK until the end of this turn. Then, you can destroy all face-up monsters with 3100 or less ATK on your opponent's field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Fiend / Fusion / Effect
+attribute: DARK
+level: 9
+atk: 3200
+def: 2500
+materials:
+  en: |-
+    "Summoned Skull" + "Red-Eyes Black Dragon"
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+images:
+- index: 1
+  image: BlackDragonSkullArchfiend-RDHC01-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/HC01-JP020
+    set_name: High-Grade Collection
+    rarities:
+    - Ultra Rare
+    - Over Rush Rare
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1027877
+---
+konami_id:
+name:
+  en: Skull Archfiend of Armageddon
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: <ruby>決<rt>けっ</rt></ruby><ruby>戦<rt>せん</rt></ruby>のスカル・デーモン
+  ja_romaji: Kessen no Sukaru Dēmon
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+summoning_condition:
+  en: |-
+    This card's name becomes "Summoned Skull" while in the hand or Graveyard.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Send 1 card from your hand to the Graveyard.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    This card's name becomes "Summoned Skull" this turn. Then, you can Special Summon 1 Level 7 or lower Normal Monster from your Graveyard face-up to your field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Fiend / Effect
+attribute: DARK
+level: 7
+atk: 2500
+def: 1200
+images:
+- index: 1
+  image: SkullArchfiendofArmageddon-RDHC01-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/HC01-JP023
+    set_name: High-Grade Collection
+    rarities:
+    - Ultra Rare
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1027878
+---
+konami_id:
+name:
+  en: Engine of Destruction
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: エンジン・オブ・デストラクション
+  ja_romaji: Enjin Obu Desutorakushon
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    You have "Blue-Eyes White Dragon" face-up on your field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Choose 1 Level 8 LIGHT Attribute Dragon Type monster in your Graveyard, and add it to your hand. Then, if you chose "Blue-Eyes Bright Dragon" with this effect, you can add 1 "The Ultimate Blue-Eyed Legend" from your Graveyard to your hand.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Spell
+property: Normal
+images:
+- index: 1
+  image: EngineofDestruction-RDHC01-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/HC01-JP024
+    set_name: High-Grade Collection
+    rarities:
+    - Ultra Rare
+    - Over Rush Rare
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1027879
+---
+konami_id:
+name:
+  en: Compulsory Evacuation Device
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ja_romaji:
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    When a player Normal or Special Summons a monster, or after your opponent activates a Spell Card.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Return 1 monster on the field to the owner's hand.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Trap
+property: Normal
+legend: true
+images:
+- index: 1
+  image: CompulsoryEvacuationDevice-RDHC01-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/HC01-JP032
+    set_name: High-Grade Collection
+    rarities:
+    - Ultra Rare
+is_translation_unofficial:
+  text:
+    en: true
+yugipedia_page_id: 1027880
