--- a/rush.yaml
+++ b/rush.yaml
@@ -125347,6 +125347,8 @@ effect:
   zh-CN:
 card_type: Spell
 property: Normal
+series:
+- Blue-Eyes
 images:
 - index: 1
   image: EngineofDestruction-RDHC01-JP-OP.png
